<resources>
    <string name="app_name">SW-Project</string>
    <string name="user">Usuário</string>
    <string name="pass">Senha</string>
    <string name="passConf">Confirmar senha</string>
    <string name="register">Cadastrar</string>
    <string name="login">Entrar</string>
    <string name="email">E-mail</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_lobby">LobbyActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string-array name="especielidades">
        <item>gg</item>
        <item>aaa</item>
    </string-array>
</resources>
